# MLOps-Lab2

./: Makefile  README.md  app.py  pyproject.toml
.github/workflows/: CICD.yml
api/: api.py
cli/: cli.py
mylib/: calculator.py
templates/: home.html
tests/: test_api.py  test_cli.py  test_logic.py
